@@ -18,6 +18,6 @@
   bit spartan, but it gets the job done.
 </longdescription>
 <use>
-  <flag name='ldos'>Install disk images for Model 4P</flag>
+  <flag name='ls-dos'>Install LS-DOS disk images for Model 4P</flag>
 </use>
 </pkgmetadata>
