@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  12 Apr 2014; Ulrich Müller <ulm@gentoo.org> xtrs-4.9d-r50.ebuild,
+  metadata.xml:
+  Rename ldos USE flag to ls-dos.
+
 *xtrs-4.9d-r50 (31 Jan 2014)
 
   31 Jan 2014; Ulrich Müller <ulm@gentoo.org> +xtrs-4.9d-r50.ebuild,
